Fix spacing on tags. Closes #66

--- a/static/css/contacts.css
+++ b/static/css/contacts.css
@@ -49,3 +49,7 @@ hr {
     display: inline;
     font-weight: inherit;
 }
+
+.tag-label {
+    line-height: 2;
+}
